src/objects/Achievement_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>Achievement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Achievement</label>
        <referenceTo>Achievement__c</referenceTo>
        <relationshipLabel>Achievement Assignments</relationshipLabel>
        <relationshipName>Achievement_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Community_Id__c</fullName>
        <label>Community Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Achievement Assignments</relationshipLabel>
        <relationshipName>Achievement_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Eligible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acquired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Training_Plan_Achievement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Training Plan Achievement</label>
        <referenceTo>Training_Plan_Achievement__c</referenceTo>
        <relationshipLabel>Achievement Assignments</relationshipLabel>
        <relationshipName>Achievement_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Training_Track__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Training Track</label>
        <referenceTo>Training_Track__c</referenceTo>
        <relationshipLabel>Achievement Assignments</relationshipLabel>
        <relationshipName>Achievement_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Achievement_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Achievement Assignment</label>
    <nameField>
        <displayFormat>AAS-{0000000}</displayFormat>
        <label>Achievement Assignment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Achievement Assignments</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>